--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-toggle": "^4.1.3",
+    "reset": "^0.1.0",
     "styled-components": "^6.0.0-rc.5",
+    "styled-reset": "^4.4.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-toggle": "^4.0.3",
     "@types/styled-components": "^5.1.26"
   }
 }
